--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "maatwebsite/excel": "^3.1",
+        "toolszhang/bigbox": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -59,5 +61,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+  "repositories": {
+    "toolszhang/bigbox": {
+      "type": "path",
+      "url": "/mnt/packagist/tools"
     }
+  }
 }
