--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
-        "toolszhang/bigbox": "dev-master"
+        "toolszhang/bigbox": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -65,7 +65,7 @@
   "repositories": {
     "toolszhang/bigbox": {
       "type": "path",
-      "url": "/mnt/packagist/tools"
+      "url": "/mnt/project/php/laravel-tools"
     }
   }
 }
