--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
         "toolszhang/bigbox": "^1.0"
