--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,13 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.5",
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
-        "toolszhang/bigbox": "^1.0"
+        "rap2hpoutre/laravel-log-viewer": "^1.6",
+        "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
