--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,12 @@
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.5",
         "laravel/framework": "^7.0",
+        "laravel/nexmo-notification-channel": "^2.3",
         "laravel/passport": "^9.2",
+        "laravel/slack-notification-channel": "^2.0",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "overtrue/wechat": "^4.2",
         "rap2hpoutre/laravel-log-viewer": "^1.6",
         "spatie/laravel-permission": "^3.13"
     },
